update Get BookLocation feat
